--- a/bc/static_src/sass/components/_promo-hero-home.scss
+++ b/bc/static_src/sass/components/_promo-hero-home.scss
@@ -7,7 +7,7 @@
 }
 
 .promo-hero-home {
-    width: calc(100vw - 15px);
+    width: 100vw;
     transform: translateX(-50%);
     position: relative;
     margin-left: 50%;
@@ -17,6 +17,10 @@
     overflow: hidden;
     padding: 40px 0;
     min-height: 350px;
+
+    @include media-query(mob-landscape) {
+        width: calc(100vw - 15px);
+    }
 
     @include media-query(tablet-landscape) {
         grid-template-columns: 6fr 5fr;
